--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -243,6 +243,7 @@
 																				<a href="/static/about" class="waves-effect" ><i class="ti-info-alt"></i></a>
 																				
 														</li>
+														<li><%= link_to logout_path, method: :delete do %><i class="material-icons sm">settings_power</i><%end%></li>
 														
 														
 
