--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -35,7 +35,7 @@
 
   </div>
   <div class="form-group">
-  <%=select("test", "evalnum",(1..20).to_a, {prompt: 'Number of questions per evaluation'}, {:class => 'form-control'})%>
+  <%=select(:test, :evalnum, (1..20).to_a, {prompt: 'Number of questions per evaluation'}, {:class => 'form-control'})%>
   </div>
 </div>
 </div>
