fixing of the evaluations controller

--- a/app/views/tests/display.html.erb
+++ b/app/views/tests/display.html.erb
@@ -25,7 +25,7 @@
 
     <% end%>
   <% else %>
-   
+   <a href="/tests/<%=@test.id%>/evaluations/new" class="btn btn-primary">Start new Evaluation</a>
   <% end%>
   </div>
   </div>
